--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
@@ -20,7 +20,7 @@
                 <div class="qrcode text-center">
                     <img src="images/image-qr-code.png" class="w-100" alt="">
                     <div class="content">
-                        <h4 class="p-2 h5 mb-0">Improve your front-end skills by building projects</h4>
+                        <h1 class="p-2 h5 mb-0">Improve your front-end skills by building projects</h1>
                         <p> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
                     </div>
                 </div>
